simple-http-statuses/01-gateway-unkown-gatewayclass.yml
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-unknown-gatewayclass
  namespace: default
spec:
  gatewayClassName: my-gateway-class-unknown
  listeners:
    - protocol: HTTP
      port: 8000
      routes:
        kind: HTTPRoute
